# playground

./: Readme.md
angular/: .gitignore  task-work.code-workspace
angular/material/: README.md  angular.json  package.json
angular/task/: angular.json  package.json
c#/WorkTaskApp/: Readme.md  WorkTaskApp.db  WorkTaskApp.sln  WrokTaskApp.a5er
c/read_binary_sample/: Readme.md  read_binary_sample.c  read_binary_sample.h
electron/: links.md
electron/clock/: clock.js  index.html  main.js  package.json  style.css
event_log/: 20250122_D-PlusOsaka_1_開発生産性を高めたい！関西エンジニアのためのTips共有会.md
event_log/2020-0819/: Cybozu Tech Meetup #5 活動領域を広げるQA .md
event_log/2020-0825/: Cybozu Frontend Monthly #2.md
event_log/2020-0827_DevelopersSummitKANSAI/: SCRUMMASTER THE BOOKで広がるスクラムマスターの世界.md  Webフロントエンドのトレンド ～サーバーレスSPA、Jamstack～.md  関西的なノリで変化の波をノリこなすチームの取り組み.md
event_log/2020-0914/: Cybozu Tech Meetup #6 サイボウズのエンジニア新人研修 2020.md
event_log/2020-0929/: Cybozu Frontend Monthly #3.md  サイボウズQ&Aライブ.md
event_log/2021-0128/: # 【オンライン】エンジニア達の「〇〇完全に理解した」Talk #13.md
event_log/2021-1028/: エンジニア達の「〇〇完全に理解した」Talk#22.md
event_log/2021-1223/: エンジニア達の「〇〇完全に理解した」Talk#24.md
event_log/2022-0127/: エンジニア達の「〇〇完全に理解した」Talk#25.md
event_log/2022-0307/: テスト設計チュートリアル_ちびこん編_22.md
event_log/2022-0315/: やさしいテスト（初心者向け）.md
rust/sort_test/: .gitignore  Cargo.toml  Readme.md
rust/sort_test/rsc/: sort-order-test.csv  source_uri.txt
rust/sort_test/src/: main.rs
rust/sort_test/test/error/: sort-order-test_sorted.csv
rust/sort_test/test/normal/: sort-order-test_sorted.csv
(+89 files in other folders)
