[package]
name = "sort_test"
version = "0.1.0"
authors = ["watame <pandora.border@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# csv読み込み用クレート
csv = "1.1"
# シリアライズ、デシリアライズ用クレートderiveでトレイトを利用できるようにfeaturesも追加
serde = { version = "1.0", features = ["derive"] }